--- a/Theory.tex
+++ b/Theory.tex
@@ -157,15 +157,15 @@ electroweak precision data, g-2, astrophysical observations, b-physics, CP-viola
 Although the exploitation of indirect searches for supersymmetry is very useful in order to constrain the allowed SUSY parameter space, the most stringent exclusion limits are derived from direct searches at collider experiments. Typically, searches for SUSY at colliders make use of the specific production and decay properties which are caused by the assumption of R-parity conservation. These imply that sparticles are only produced in pairs and decay via cascades into the lightest supersymmetric particle which is often assumed to be the lightest neutralino. This leaves the experiment undetected and manifests in missing energy or missing momentum. Such missing energy signatures are thus a key-feature of searches for supersymmetry in collider experiments. Depending on the type of supersymmetric particle produced the missing energy can be accompanied by several leptons, photons or jets. Usually, searches are classified according to their targeted final state and are aimed at a specific kind of supersymmetric particle. If searches are designed quite generic in order to be sensitive to various types of particles and models, they are called \textit{inclusive} searches. \\  
 Extensive searches resulting in the tightest exclusion limits in the pre-LHC era have been realised by the experiments performed at \hera, \lep and \tevatron:
 \begin{description}
- \item \textbf{\hera \cite{Aid:1996es, Breitweg:1998gk}}: At \hera searches for R-parity conserving supersymmetric models have been mainly targeting processes involving the production of a selectron and a squark. The dominant MSSM process at \hera is the production of a selectron and a squark via the exchange of a neutralino where $\tilde{e}$ and $\tilde{q}$ subsequently decay into any lighter gaugino and their respective SM partner. Thus, a distinct experimental signature is given by an electron, hadrons and missing energy and momentum. Since no excess over the SM expectation has been observed, exclusion limits for the masses of the selectron and squark in the context of the MSSM have been derived. Depending on the specific choices made to contrain the MSSM parameter space, the excluded region extends to $\approx 60 - 70$ \gev for squark masses and $\approx 40$ \gev for the LSP mass. 
- \item \textbf{\lep \cite{ALEPHSUSY, DELPHISUSY, L3SUSY, OPALSUSY, LEPLimits}}: At \lep various searches for supersymmetry have been performed targeting different species of supersymmetric particles. Scalar leptons and quarks are mainly pair-produced in the s-channel via $\gamma$ or $Z$ exchange. In case of selectrons also the t-channel exchange of neutralinos yields important contributions. The typical energy scale at \lep results in decays into the respective SM partner particles -- except for the scalar top -- and the lightest neutralino while also cascade decays are possible. Typical final states contain missing energy and a pair of acoplanar leptons or jets where the direction of one of the leptons/jets is not in the plane defined by the direction of the second lepton/jet and the beam direction. Similarly, neutrinos and charginos are expected to be pair-produced via $Z$ and $Z/\gamma$ s-channel exchange or t-channel selectron or sneutrino exchange, respectively. Typically, the lightest neutralino and fermion pairs are the final decay products of such events. Hence, the final state in case of chargino production is characterized by missing energy accompanied by four jets, two jets and one lepton or only leptons depending on the specific decay mode of the chargino while the most important signature for neutralino production are acoplanar pairs of jets or leptons coming along with large missing momentum. However, the exact decay topologies strongly depend on the particular mass spectrum of the supersymmetric particles so that the above mentioned topologies could also be accompanied by photons or manifest in multiple jets or leptons in cascade decays. Interpretations of combined results from all four experiments in the mSUGRA model lead to exclusion limits showing that $m_{1/2}$ has to be greater than $\approx 100 - 200$~\gev over a wide range of $m_{0}$ up to the~\tev-region for specific fixed other parameters. The lower limit on the LSP mass is found to be around 50~\gev nearly independent of other model constraints. 
- \item \textbf{\tevatron \cite{CDFLimits, D0Limits, Abazov200934}}: The \tevatron accelerator was the best place to search for supersymmetry before the actual start of the LHC, as the center of mass energy exceeded that of \hera and \lep by several orders of magnitude. Since sparticles are expected to be heavy, thus a rich program of supersymmetric searches was enabled covering various final states of different lepton, photon or jet multiplicities. Of special interest is the search for colored sparticles like squarks and gluinos, as \tevatron is a hadron collider. Squarks are expected to decay preferrably into a quark and the LSP, if they are heavier than the gluinos, resulting in an acoplanar-jet topology with missing transverse momentum. If gluinos are lighter than squarks, they will predominantly decay into a quark pair and the LSP producing a multijet final state accompanied by missing transverse momentum. Thus, searches for squarks and gluinos at \tevatron have been performed exploiting multijet and missing momentum final states. Results have been interpreted in the context of mSUGRA and extended the LEP results in the parameter region of $m_{0} = 70 - 300$ \gev and $m_{1/2} = 125 - 165$~\gev. Thus, gluinos below $\approx 280-300$~\gev for all squark masses and squarks below $380$~\gev independent of the gluino mass could be excluded. 
+ \item \textbf{\hera \cite{Aid:1996es, Breitweg:1998gk}}: At \hera searches for R-parity conserving supersymmetric models have been mainly targeting processes involving the production of a selectron and a squark. The dominant MSSM process at \hera is the production of a selectron and a squark via the exchange of a neutralino where $\tilde{e}$ and $\tilde{q}$ subsequently decay into any lighter gaugino and their respective SM partner. Thus, a distinct experimental signature is given by an electron, hadrons and missing energy and momentum. Since no excess over the SM expectation has been observed, exclusion limits for the masses of the selectron and squark in the context of the MSSM have been derived. Depending on the specific choices made to contrain the MSSM parameter space, the excluded region extends to around 60 -- 70\gev for squark masses and around 40\gev for the LSP mass. 
+ \item \textbf{\lep \cite{ALEPHSUSY, DELPHISUSY, L3SUSY, OPALSUSY, LEPLimits}}: At \lep various searches for supersymmetry have been performed targeting different species of supersymmetric particles. Scalar leptons and quarks are mainly pair-produced in the s-channel via $\gamma$ or $Z$ exchange. In case of selectrons also the t-channel exchange of neutralinos yields important contributions. The typical energy scale at \lep results in decays into the respective SM partner particles -- except for the scalar top -- and the lightest neutralino while also cascade decays are possible. Typical final states contain missing energy and a pair of acoplanar leptons or jets where the direction of one of the leptons/jets is not in the plane defined by the direction of the second lepton/jet and the beam direction. Similarly, neutrinos and charginos are expected to be pair-produced via $Z$ and $Z/\gamma$ s-channel exchange or t-channel selectron or sneutrino exchange, respectively. Typically, the lightest neutralino and fermion pairs are the final decay products of such events. Hence, the final state in case of chargino production is characterized by missing energy accompanied by four jets, two jets and one lepton or only leptons depending on the specific decay mode of the chargino while the most important signature for neutralino production are acoplanar pairs of jets or leptons coming along with large missing momentum. However, the exact decay topologies strongly depend on the particular mass spectrum of the supersymmetric particles so that the above mentioned topologies could also be accompanied by photons or manifest in multiple jets or leptons in cascade decays. Interpretations of combined results from all four experiments in the mSUGRA model lead to exclusion limits showing that $m_{1/2}$ has to be greater than $\approx 100 - 200$\gev over a wide range of $m_{0}$ up to the\tev-region for specific fixed other parameters. The lower limit on the LSP mass is found to be around 50~\gev nearly independent of other model constraints. 
+ \item \textbf{\tevatron \cite{CDFLimits, D0Limits, Abazov200934}}: The \tevatron accelerator was the best place to search for supersymmetry before the actual start of the LHC, as the center of mass energy exceeded that of \hera and \lep by several orders of magnitude. Since sparticles are expected to be heavy, thus a rich program of supersymmetric searches was enabled covering various final states of different lepton, photon or jet multiplicities. Of special interest is the search for colored sparticles like squarks and gluinos, as \tevatron is a hadron collider. The expected decay topologies are very similar to those at the LHC and thus discussed below. Results from susy searches at the Tevatron have been interpreted in the context of mSUGRA and extended the LEP results in the parameter region of $m_{0} =$ 70 -- 300\gev and $m_{1/2} =$ 125 -- 165\gev. This allows to exclude gluinos below around 280 -- 300\gev for all squark masses and squarks below $380$\gev independent of the gluino mass. 
 \end{description}
-The absence of SUSY-like signals at any collider experiment performed previous to the start of the LHC and exclusion limits at the order of a few hundred \gev on sparticle masses activated an abundant amount of searches for supersymmetry at the LHC as it opened already with a center of mass energy of 7 \tev an even larger phase space than the \tevatron before. At the LHC a variety of searches targeting the various different production and decay modes of supersymmetric partices are performed. In general, they can be classified into searches for electroweakinos, third generation sfermions and searches for squarks and gluinos. Of particular interest are searches for colored particles as the LHC is as well as \tevatron a hadron collider. \\
+The absence of SUSY-like signals at any collider experiment performed previous to the start of the LHC and exclusion limits at the order of a few hundred \gev on sparticle masses activated an abundant amount of searches for supersymmetry at the LHC as it opened already with a centre of mass energy of 7\tev an even larger phase space than the \tevatron before. At the LHC, a variety of searches targeting the various different production and decay modes of supersymmetric partices are performed. In general, they can be classified into searches for electroweakinos, third generation sfermions and searches for squarks and gluinos. Of particular interest are searches for coloured particles, as the LHC is as well as \tevatron a hadron collider. \\
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
-    \includegraphics[width=0.85\textwidth]{figures/Susy_Feynman.jpg} 
+    \includegraphics[width=0.75\textwidth]{figures/Susy_Feynman.jpg} 
   \end{tabular}
   \caption{Example diagrams for the production of supersymmetric particles in hadron collisions at parton level.}
   \label{fig:susy_feynman}
@@ -174,7 +174,38 @@ At leading order sparticles in R-parity conserving models are predominantly prod
 \begin{equation}
  pp \rightarrow \tilde{g}\tilde{g}, \tilde{g}\tilde{q}, \tilde{q}\tilde{q} \, .
 \end{equation}
-Some example diagrams for the production modes of such processes at parton level are shown in Fig.~\ref{fig:susy_feynman}. Typically, the squarks are assumed to be mass degenerate and refer to the partners of the light-flavour $(u, d, s, c, b)$ quarks. Supersymmetric partners of the top quark are considered separately due to a potentially large mixing affecting the mass splitting. Most recent SUSY cross section calculations consider higher order corrections caused e.g. by quark radiation or gluon loops typically up to next-to-leading order (NLO)~\cite{Kramer:2012bx}.\\
+Some example diagrams for the production modes of such processes at parton level are shown in Fig.~\ref{fig:susy_feynman}. Typically, squarks are assumed to be mass degenerate and refer to the partners of the light-flavour $(u, d, s, c)$ quarks. Supersymmetric partners of the bottom and top quark are considered separately due to a potentially large mixing affecting the mass splitting.\\
+Most recent SUSY cross section calculations consider higher order corrections caused \eg by quark radiation or gluon loops typically up to next-to-leading order (NLO). Production cross sections for the processes $pp \rightarrow \tilde{g}$, $pp \rightarrow \tilde{q}$ and $pp \rightarrow \tilde{t}$ are illustrated in Fig.~\ref{fig:susy_cross_sec} for different sparticle masses as function of the centre of mass energy. Typically, the relative size of the different channels depends on the respective squark and gluino masses as well as the energy of the collider. While for small masses of SUSY particles or large collider energies the cross sections of gluinos are dominant, associated squark-gluino production and squark-pair production are favoured in case of large SUSY masses and low collider energies. For instance for a gluino with a mass of 1.5\tev, the production cross section is expected to be at the order of $10^{-4}$\pb at $\sqrt{s} = 7$\tev.\\
+In addition to various different production channels, also the decay of supersymmetric particles offers a rich variety of different modes. Depending on the specific mass hierarchy different decay topologies are expected. In Fig.~\ref{fig:susy_decay} some example diagrams for possible decay modes of squarks and gluinos are illustrated. While squarks are expected to decay preferrably into a quark and the LSP, gluinos predominantly decay into a quark pair and the LSP. In case of gluino decays, the quark pair can also be for instance a pair of top quarks representing the case of gluino-mediated stop production. In all such cases a multijet final state accompanied by missing transverse momentum with no isolated leptons is expected as experimental signature. These processes and final states are also the main subject of this thesis.\\ 
+\begin{figure}[!t]
+  \centering
+  % \makebox[\linewidth]{
+  \begin{minipage}[c]{1.\textwidth}
+    \begin{center}
+      \includegraphics[width=0.49\textwidth]{figures/gluino_xsec.pdf}  
+      \includegraphics[width=0.49\textwidth]{figures/squark_xsec.pdf} \\
+      \includegraphics[width=0.49\textwidth]{figures/stop_xsec.pdf}
+    \end{center}
+  \end{minipage}
+  \caption{SUSY production cross sections of processes $pp \rightarrow \tilde{g}$ (\textit{top left}), $pp \rightarrow \tilde{q}$ (\textit{top right}) and $pp \rightarrow \tilde{t}$ (\textit{bottom}) displayed for different sparticle masses shown as function of the centre of mass energy~\cite{Kramer:2012bx, Borschensky:2014cia}.}
+  \label{fig:susy_cross_sec}
+\end{figure}
+\begin{figure}[!t]
+  \centering
+  % \makebox[\linewidth]{
+  \begin{minipage}[c]{1.\textwidth}
+    \begin{center}
+      \includegraphics[width=0.49\textwidth]{figures/T1qqqq.pdf}  
+      \includegraphics[width=0.49\textwidth]{figures/T1tttt_feyn.pdf} \\
+      \includegraphics[width=0.49\textwidth]{figures/T2qq.pdf}
+    \end{center}
+  \end{minipage}
+  \caption{Example diagrams of different SUSY decay channels showing $\tilde{g} \rightarrow q\bar{q} \tilde{\chi}_1^0$ (\textit{top left}), $\tilde{g} \rightarrow t\bar{t}\tilde{\chi}_1^0$ (\textit{top right}) and $\tilde{q} \rightarrow q\tilde{\chi}_1^0$ (\textit{bottom}).}
+  \label{fig:susy_decay}
+\end{figure}
+However, final states containing multiple jets accompanied by large values of missing transverse energy do not only arise from SUSY events, but are also realised for several SM processes. For any new physics search such SM processes resulting in the same final state have to be considered as background. In case of multijet + \met searches these are typically $\ZJets \rightarrow \nu \bar{\nu} + \mathrm{jets}$ events in which large genuine \met is caused by the neutrinos. This background is denoted \textit{invisible Z background} in this thesis. Furthermore, events with intrinsic missing energy stem from \WJets and \ttbar events. The top-quark is the heaviest quark in the SM with a mass of $173.34 \pm 0.76$\gev~\cite{ATLAS:2014wva}. Since its lifetime is smaller than the hadronisation timescale, it decays rapidly and behaves as a bare quark without forming colour-neutral hadrons. The decay takes place via the weak interaction and as denoted in Sec.~\ref{sec:sm}, the quark mixing is parametrized by the CKM-matrix. Since the corresponding matrix element $V_{\mathrm{tb}} \approx 1$, the top quark decays thus almost exclusively into a W boson and a b-quark. Hence, the decay of the top-quark is experimentally characterized by the decay of the W boson. In general, the W boson can decay into a charged lepton and its corresponding neutrino or a pair of light quarks of the first two generations. Taking into account the three possible colour states for each quark pair, this results in nine different W decay modes. Consequently, two thirds of top quark decays result exclusively in hadrons. However, since the targeted final state is supposed to contain a significant amount of missing energy only the semi-leptonic top quark decays relevantly contribute as background events. Thus, \WJets and \ttbar events featuring a decay containing an electron or muon that is not reconstructed, not isolated or falling out of the detector acceptance have to be considered as possible background. This source of background events is referred to as \textit{lost-lepton background}. Furthermore, also \WJets and \ttbar in which the lepton is a hadronically decaying $\tau$ lepton have to be accounted for. This background is known as \textit{hadronic-tau background}. Another source of background events is arising from QCD multijet events. Although these possess no intrinsic missing nergy, severly mismeasured jets can give rise to large amounts of \met for instance because of instrumental effects or semi-leptonically decaying heavy-flavour quarks. This background process is denoted \textit{QCD background} in the following. Contributions from other SM processes are found to be negligible~\cite{springerlink:10.1007/JHEP08(2011)155, Chatrchyan:2012lia}. \\
+\\
+As soon as first collision data have been obtained at the LHC at a centre of mass energy of $\sqrt{s} = 7$\tev, searches for supersymmetry have been carried out based on various final states. Since however similar to previous collider experiments, no hints of new physics have been found, the results have been interpreted in various SUSY models. In Fig.~\ref{fig:CMSSM_7TeV} interpretations of CMS searches for supersymmetry based on various different hadronic and leptonic final states in the context of the CMSSM are summarized. 
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
@@ -183,23 +214,19 @@ Some example diagrams for the production modes of such processes at parton level
   \caption{Interpretation of searches for supersymmetry at the CMS experiment within the CMSSM. Shown are the 95\% CL exclusion limits in the $m_0$ and $m_{1/2}$ plane for various searches performed using different final state topologies~\cite{bib:CMS:PhysicsResultsSUS}.}
   \label{fig:CMSSM_7TeV}
 \end{figure}
+For comparison, also the exclusion curves from the LEP experiments are illustrated in the $m_0/m_{1/2}$-plane. These have been widely exceeded already with those early searches performed at the LHC. In general, the exclusions in the CMSSM $m_0/m_{1/2}$-plane translate into constraints on the respective sparticle masses of around 1.3\tev in case of $m_{\tilde{g}} = m_{\tilde{q}}$ obtained from searches based on all-hadronic states as described above.  \\
+In addition to such interpretations in full models like the CMSSM in which several experimental observables are predicted based on few theoretical parameters, results of SUSY searches are also often interpreted in the context of \textit{simplified model spectra} (SMS)~\cite{ArkaniHamed:2007fw, Alwall:2008ag, Alwall:2008va, Chatrchyan:2013sza}. Since often many SUSY models predict a similar phenomenology, simplified models do not rely on detailled descriptions of specific model parameters but moreover characterize the dominant features of SUSY events that are common for several SUSY and SUSY-like models. Thus, the characterization of basic properties allows a comparison of search results to any (more complex) models. Consequently, a simplified model is described by a set of particles and a certain sequence of their production and decay. Typical benchmark scenarios are for instance those illustrated in Fig.~\ref{fig:susy_decay} in which the only free parameters are the two sparticle masses. The branching ratios of the pair-produced initial particles into the final state particles are assumed to be 100\% and all other sparticles are decoupled by assuming their masses to be much larger. Interpretations of SUSY searches at the CMS experiment within the context of these SMS are illustrated in Fig.~\ref{fig:SMS_7TeV} for $\tilde{g} \rightarrow qq\tilde{\chi}^0$ and $\tilde{q} \rightarrow q \tilde{\chi}^0$. These illustrate the 95\% confidence level upper limit on the product of the cross section and branching fraction as function of the sparticles masses. Hence, the values of cross sections times branching ratio can be compared to any theoretical prediction in order to determine whether the specific model is compatible with data. The exclusion curves shown in Fig.~\ref{fig:SMS_7TeV} indicate that in the context of these specific simplified models gluinos with masses up to around 1\tev and light-flavour squarks around 800\gev are excluded in case of LSP masses up to around 100\gev. \\
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
     \includegraphics[width=0.49\textwidth]{figures/T1_7TeV.pdf} &
     \includegraphics[width=0.49\textwidth]{figures/T2_7TeV.pdf}
   \end{tabular}
-  \caption{Interpretation of searches for supersymmetry at the CMS experiment with simplified models in $\tilde{g} \rightarrow qq\tilde{\chi}^0$ (\textit{left}) and $\tilde{q} \rightarrow q \tilde{\chi}^0$ (\textit{right}) topologies. Shown are the 95\% CL exclusion limits on the produced particle and LSP masses. The grey area represents the region where the respective decay mode is forbidden~\cite{Chatrchyan:2013sza}.}
+  \caption{Interpretation of searches for supersymmetry at the CMS experiment with simplified models in $\tilde{g} \rightarrow qq\tilde{\chi}^0$ (\textit{left}) and $\tilde{q} \rightarrow q \tilde{\chi}^0$ (\textit{right}) topologies. Shown are the 95\% CL upper limits on the produced particle and LSP masses. The grey area represents the region where the respective decay mode is forbidden~\cite{Chatrchyan:2013sza}.}
   \label{fig:SMS_7TeV}
 \end{figure}
 \\
-- decay
-\\
-\\
-- backgrounds
-\\
-\\
-- 7 TeV searches
+Although the SUSY parameter space has been investigated already intensively with the LHC data obtained at $\sqrt{s} = 7$\tev and exclusion limits on sparticle masses enter the \tev range already, searches for supersymmetry stay a vary vital field within the CMS experiment also for $\sqrt{s} = 8$\tev. As seen already in Fig.~\ref{fig:susy_cross_sec}, production cross sections are expected to largely increase for increasing centre of mass energies. In particular, gluino and light-flavour squark cross sections profit a lot from the collider energy increase. Thus, in particular searches for those sparticles based on final states containing several hard jets and high values of missing transverse momentum are of major interest for analyses of the LHC $\sqrt{s} = 8$\tev data.   
 
 
 
