--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1939,6 +1939,20 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       SLACcitation   = "%%CITATION = ARXIV:1206.2892;%%",
 }
 
+@article{Borschensky:2014cia,
+      author         = "Borschensky, Christoph and Krämer, Michael and Kulesza,
+                        Anna and Mangano, Michelangelo and Padhi, Sanjay and
+                        others",
+      title          = "{Squark and gluino production cross sections in pp
+                        collisions at $\sqrt{s}$ = 13, 14, 33 and 100 TeV}",
+      year           = "2014",
+      eprint         = "1407.5066",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MS-TP-14-25",
+      SLACcitation   = "%%CITATION = ARXIV:1407.5066;%%",
+}
+
 % --- Indirect searches for new physics -------------------
 @Article{Chen:2001fja,
      author    = "Chen, S. and others",
