--- a/Thesis.tex
+++ b/Thesis.tex
@@ -65,6 +65,8 @@ a4paper
 %\usepackage{setspace}
 %\doublespacing
 
+\parindent0pt 
+
 \hyphenation{Super-sym-me-try}
 \hyphenation{maximum-like-li-hood}
 
