--- a/Thesis.bib
+++ b/Thesis.bib
@@ -27,6 +27,16 @@
   url = {http://link.aps.org/doi/10.1103/PhysRevD.86.010001}
 }
 
+@article{Agashe:2014kda,
+      author         = "{K. A. Olive et al. (Particle Data Group)}",
+      title          = "{Review of Particle Physics}",
+      journal        = "Chin. Phys. C",
+      volume         = "38",
+      pages          = "090001",
+      doi            = "10.1088/1674-1137/38/9/090001",
+      year           = "2014"
+}
+
 @Inbook{bib:Stoerig:Philosophie,
   Author    = {Hans Joachim St{\"o}rig},
   Title     = {Kleine Weltgeschichte der Philosophie},
@@ -926,6 +936,17 @@ to 10\fbinv of Data",
       SLACcitation   = "%%CITATION = ARXIV:1101.0593;%%",
 }
 
+@ARTICLE{wmap,
+   author = {{Bennett}, C.~L., et.al.},
+   title = "{Nine-year Wilkinson Microwave Anisotropy Probe (WMAP) Observations: Final Maps and Results}",
+   journal = "Astrophysical Journal Supplement Series",
+   eprint        = "1212.5226",
+   archivePrefix = "arXiv",
+   primaryClass = "astro-ph.CO",
+   keywords = {cosmic background radiation, space vehicles: instruments},
+   year = 2012
+}
+
 @article{Ade:2013zuv,
       author         = "Ade, P.A.R. and others",
       title          = "{Planck 2013 results. XVI. Cosmological parameters}",
@@ -953,6 +974,31 @@ to 10\fbinv of Data",
       primaryClass   = "hep-ph",
       reportNumber   = "FERMILAB-PUB-04-047-A",
       SLACcitation   = "%%CITATION = HEP-PH/0404175;%%",
+}
+
+@article{cerdeno2010direct,
+  title={Direct detection of WIMPs},
+  author={Cerdeno, David G and Green, Anne M},
+  journal={arXiv preprint arXiv:1002.1912},
+  year={2010}
+}
+
+@article{Cirelli:2010xx,
+      author         = "Cirelli, Marco and Corcella, Gennaro and Hektor, Andi and
+                        Hutsi, Gert and Kadastik, Mario and others",
+      title          = "{PPPC 4 DM ID: A Poor Particle Physicist Cookbook for
+                        Dark Matter Indirect Detection}",
+      journal        = "JCAP",
+      volume         = "1103",
+      pages          = "051",
+      doi            = "10.1088/1475-7516/2012/10/E01,
+                        10.1088/1475-7516/2011/03/051",
+      year           = "2011",
+      eprint         = "1012.4515",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2010-057, SACLAY-T10-025, IFUP-TH-2010-44",
+      SLACcitation   = "%%CITATION = ARXIV:1012.4515;%%",
 }
 
 % --- Beyond the SM ---------------------------------------
@@ -1664,6 +1710,113 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
       SLACcitation   = "%%CITATION = HEP-EX/9806019;%%",
 }
 
+@Article{LEP-2,
+author = "{The ALEPH, DELPHI, L3, OPAL Collaborations, the LEP Electroweak Working Group}",
+title = "{Electroweak Measurements in Electron-Positron Collisions at W-Boson-Pair Energies at LEP}",
+journal = "Phys. Rept.",
+volume = "532",
+year = "2013",
+pages = "119",
+eprint = "1302.3415",
+archivePrefix = "arXiv",
+primaryClass = "hep-ex",
+reportNumber = "CERN-PH-EP-2013-022",
+SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
+} 
+
+@article{Erler:2012wz,
+      author         = "Erler, Jens",
+      title          = "{Tests of the Electroweak Standard Model}",
+      journal        = "J.Phys.Conf.Ser.",
+      volume         = "485",
+      pages          = "012010",
+      doi            = "10.1088/1742-6596/485/1/012010",
+      year           = "2014",
+      eprint         = "1209.3324",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1209.3324;%%",
+}
+
+@article{Ciuchini:2013pca,
+      author         = "Ciuchini, Marco and Franco, Enrico and Mishima, Satoshi
+                        and Silvestrini, Luca",
+      title          = "{Electroweak Precision Observables, New Physics and the
+                        Nature of a 126 GeV Higgs Boson}",
+      journal        = "JHEP",
+      volume         = "1308",
+      pages          = "106",
+      doi            = "10.1007/JHEP08(2013)106",
+      year           = "2013",
+      eprint         = "1306.4644",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1306.4644;%%",
+}
+
+@article{Baak:2014ora,
+      author         = "Baak, M. and others",
+      title          = "{The global electroweak fit at NNLO and prospects for the
+                        LHC and ILC}",
+      collaboration  = "Gfitter Group",
+      journal        = "Eur.Phys.J.",
+      volume         = "C74",
+      pages          = "3046",
+      doi            = "10.1140/epjc/s10052-014-3046-5",
+      year           = "2014",
+      eprint         = "1407.3792",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-14-124",
+      SLACcitation   = "%%CITATION = ARXIV:1407.3792;%%",
+}
+
+@article{Chatrchyan:2013bka,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Measurement of the B(s) to mu+ mu- branching fraction
+                        and search for B0 to mu+ mu- with the CMS Experiment}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "111",
+      pages          = "101804",
+      doi            = "10.1103/PhysRevLett.111.101804",
+      year           = "2013",
+      eprint         = "1307.5025",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-BPH-13-004, CERN-PH-EP-2013-129",
+      SLACcitation   = "%%CITATION = ARXIV:1307.5025;%%",
+}
+
+@article{Aaij:2013aka,
+      author         = "Aaij, R. and others",
+      title          = "{Measurement of the $B^0_s \to \mu^+ \mu^-$ branching
+                        fraction and search for $B^0 \to \mu^+ \mu^-$ decays at
+                        the LHCb experiment}",
+      collaboration  = "LHCb collaboration",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "111",
+      pages          = "101805",
+      doi            = "10.1103/PhysRevLett.111.101805",
+      year           = "2013",
+      eprint         = "1307.5024",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-128, LHCB-PAPER-2013-046",
+      SLACcitation   = "%%CITATION = ARXIV:1307.5024;%%",
+}
+
+@techreport{CMS-PAS-BPH-13-007,
+      title         = "{Combination of results on the rare decays $B^0_{(s)} \to
+                       \mu^+\mu^-$ from the CMS and LHCb experiments}",
+      institution   = "CERN",
+      collaboration = "CMS and LHCb Collaborations",
+      address       = "Geneva",
+      number        = "CMS-PAS-BPH-13-007. CERN-LHCb-CONF-2013-012",
+      month         = "Jun",
+      year          = "2014",
+}
+
 @article{Roszkowski:2001sb,
       author         = "Roszkowski, Leszek and Ruiz de Austri, Roberto and Nihei,
                         Takeshi",
@@ -2072,6 +2225,40 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
      SLACcitation  = "%%CITATION = HEP-PH/0611102;%%"
 }
 
+@article{Hagiwara:2011af,
+      author         = "Hagiwara, Kaoru and Liao, Ruofan and Martin, Alan D. and
+                        Nomura, Daisuke and Teubner, Thomas",
+      title          = "{$(g-2)_{\mu}$ and $\alpha(M_Z^2)$ re-evaluated using new precise
+                        data}",
+      journal        = "J.Phys.",
+      volume         = "G38",
+      pages          = "085003",
+      doi            = "10.1088/0954-3899/38/8/085003",
+      year           = "2011",
+      eprint         = "1105.3149",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "KEK-TH-1458, LTH-913, IPPP-11-18, DCPT-11-36, TU-883",
+      SLACcitation   = "%%CITATION = ARXIV:1105.3149;%%",
+}
+
+@article{Davier:2010nc,
+      author         = "Davier, Michel and Hoecker, Andreas and Malaescu, Bogdan
+                        and Zhang, Zhiqing",
+      title          = "{Reevaluation of the Hadronic Contributions to the Muon
+                        g-2 and to alpha(MZ)}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C71",
+      pages          = "1515",
+      doi            = "10.1140/epjc/s10052-012-1874-8,
+                        10.1140/epjc/s10052-010-1515-z",
+      year           = "2011",
+      eprint         = "1010.4180",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-OPEN-2010-021, LAL-10-155",
+      SLACcitation   = "%%CITATION = ARXIV:1010.4180;%%",
+}
 
 
 % --- Dark Matter and Dark Energy -------------------------------------------
