--- a/Theory.tex
+++ b/Theory.tex
@@ -146,12 +146,12 @@ The two most popular SUSY breaking scenarios are either based on gravity-mediate
 
 \section{Searches for Supersymmetry and Current Constraints}
 \label{sec:susy_status}
-The appealing attributes of supersymmetry which have been discussed above initiated a couple of indirect and direct searches looking for hints of supersymmetric particles. Although no sign for SUSY has been observed in nature so far, several results have been used in order to constrain the allowed parameter space. This section gives a short introduction to general search strategies for supersymmetry with main focus on collider experiments and provides a short overview of the status of experimental results. Results of direct searches at the LHC discussed here are restricted to results from searches performed previous to the analysis presented in this thesis. Further discussion of the status of supersymmetry after LHC Run-I follows in Sec.~\ref{sec:susy_status}.  
+The appealing attributes of supersymmetry which have been discussed above initiated a couple of indirect and direct searches looking for hints of supersymmetric particles. Although no sign for SUSY has been observed in nature so far, several results have been used in order to constrain the allowed parameter space. This section gives a short introduction to general search strategies for supersymmetry with main focus on collider experiments and provides a short overview of the status of experimental results. Results of direct searches at the LHC discussed in this section are restricted to results from searches performed previous to the analysis presented in this thesis. Further discussion of the status of supersymmetry after LHC Run-I follows in Sec.~\ref{sec:susy_status}.  
 
-\subsection{Constraints from Indirect Measurements}
+\subsection{Indirect Constraints}
 \label{subsec:susy_indirect}
-electroweak precision data, g-2, astrophysical observations, b-physics, CP-violation, FCNC
-
+Influences from the existence of supersymmetric particles can show up in manifold ways. For instance, higher-order contributions to SM processes could be induced from SUSY. Such contributions might impact for instance electroweak precision data, rare decays of B-mesons or the anomalous magnetic moment of the muon. However, global fits to electroweak precision data using several precision measurements of SM parameters and particle masses, like $m_W$ and $m_t$, together with theoretical calculations have found no evidence for any inconsistency of the SM only hypothesis so far~\cite{LEP-2, Erler:2012wz, Ciuchini:2013pca, Baak:2014ora}. Furthermore, precise measurements of rare processes in B meson decays, like $B_s^0 \rightarrow \mu^+ \mu^-$, are in good agreement with expectations from the SM~\cite{Chatrchyan:2013bka, Aaij:2013aka, CMS-PAS-BPH-13-007}. The most compelling difference between experimental results and SM prediction, currently is observed for the anomalous magnetic moment of the muon~\cite{Bennett:2006fi, Hagiwara:2011af, Agashe:2014kda}. Here, deviations at the level of $3.6\sigma$ occur. However, discussions about the accuracy of the SM calculation are ongoing~\cite{Davier:2010nc}. \\  
+Further constraints arise from astrophysical and cosmological observations. These occur from direct~\cite{cerdeno2010direct} and indirect~\cite{Cirelli:2010xx} dark matter searches. Moreover, several observations suggest that a considerable amount of cold dark matter contributes to the composition of the universe~\cite{wmap, Ade:2013zuv}. Good candidates are weakly interacting massive particles (WIMPS), just as the neutralino, in case it is the lightest supersymmetric particle. Consequently, also the observed cold dark relic density can put strong constraints on the MSSM parameter space.      
 \subsection{Direct Searches at Collider Experiments}
 \label{subsec:susy_collider}
 Although the exploitation of indirect searches for supersymmetry is very useful in order to constrain the allowed SUSY parameter space, the most stringent exclusion limits are derived from direct searches at collider experiments. Typically, searches for SUSY at colliders make use of the specific production and decay properties which are caused by the assumption of R-parity conservation. These imply that sparticles are only produced in pairs and decay via cascades into the lightest supersymmetric particle which is often assumed to be the lightest neutralino. This leaves the experiment undetected and manifests in missing energy or missing momentum. Such missing energy signatures are thus a key-feature of searches for supersymmetry in collider experiments. Depending on the type of supersymmetric particle produced the missing energy can be accompanied by several leptons, photons or jets. Usually, searches are classified according to their targeted final state and are aimed at a specific kind of supersymmetric particle. If searches are designed quite generic in order to be sensitive to various types of particles and models, they are called \textit{inclusive} searches. \\  
